--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel/breeze": "^1.27",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.3"
+        "livewire/livewire": "^3.0",
+        "livewire/volt": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
